Fix option button throwing off centering

--- a/src/features/roller/index.module.less
+++ b/src/features/roller/index.module.less
@@ -25,4 +25,13 @@
     padding-left: 24px;
     padding-right: 24px;
   }
+
+  & > div {
+    position: relative;
+
+    & > button {
+      position: absolute;
+      right: 0;
+    }
+  }
 }
